# collatz_finder

./: .clippy.toml  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: lib.rs  main.rs  module.rs  util.rs
