[package]
#"collatz" was taken lol
name = "collatz_finder"
description = "Get XOR hash/digest with this command-line tool"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/Rudxain/collatz_finder"
keywords = ["math", "Collatz", "conjecture", "search", "counterexample"]
categories = ["command-line-utilities", "algorithms"]
license = "Unlicense"
exclude = [".*"]

[[bin]]
name = "colfind"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
