[package]
# "collatz" was taken
name = "collatz_finder"
description = "Tries to find a counterexample to the Collatz Conjecture"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/Rudxain/collatz_finder"
keywords = ["math", "Collatz", "conjecture", "search", "counterexample"]
categories = ["command-line-utilities", "algorithms"]
license = "Unlicense"
exclude = [".*"]

[[bin]]
name = "colfind"
path = "src/main.rs"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"