[package]
# "collatz" was taken
name = "collatz_finder"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/Rudxain/collatz_finder"

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
num-bigint = "0.4"

[[bin]]
name = "colfind"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
